WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286186
REGRESSION(
287234@main
): StyleGradientImages never cache their image
https://bugs.webkit.org/show_bug.cgi?id=286186
Summary
REGRESSION(287234@main): StyleGradientImages never cache their image
Sam Weinig
Reported
2025-01-17 18:40:56 PST
StyleGradientImages never cache their image due to stopsAreCacheable() being incorrect.
Attachments
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2025-01-17 18:44:54 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39230
Sam Weinig
Comment 2
2025-01-18 10:04:30 PST
Amusingly, the fact that this was broken was what fixed gradients in filters for
288390@main
. To keep that working, we need to also remove the unnecessary client check.
EWS
Comment 3
2025-01-18 14:03:48 PST
Committed
289123@main
(f88290ea41bc): <
https://commits.webkit.org/289123@main
> Reviewed commits have been landed. Closing PR #39230 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2025-01-18 14:04:15 PST
<
rdar://problem/143196517
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug